# polymarket-copytrader

./: .env.example  .gitignore  README.md  pyproject.toml  validate_signal.py
.github/workflows/: daily.yml
data/: predictions.csv
src/copytrader/: __init__.py  analyze.py  cli.py  config.py  export.py  kalshi.py  models.py  notifier.py  paper.py  polymarket.py  research.py  signals.py  storage.py
tests/: test_analyze.py  test_paper.py  test_signals.py  test_storage.py
