[project]
name = "polymarket-copytrader"
version = "0.1.0"
description = "Polymarket top-trader consensus signal generator with Discord alerts and Kalshi/sportsbook cross-venue support."
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "apscheduler>=3.10",
    "rapidfuzz>=3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
]

[project.scripts]
copytrader = "copytrader.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
